# Raspberry-monitor-UI

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.md  README_CN.md  index.html  monitor.service  pyproject.toml  server.py  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
deployment/: install.sh  monitor.service
src/monitor/: __init__.py  __main__.py  cache.py  config.py  server.py  speedtest.py
src/monitor/collectors/: __init__.py  base.py  cpu.py  disk.py  memory.py  network.py  overview.py  process.py  sensors.py  tailscale.py
src/monitor/handlers/: __init__.py  health.py  system.py  tailscale.py
tests/: __init__.py  conftest.py  test_cache.py  test_config.py
tests/test_collectors/: __init__.py  test_cpu.py  test_memory.py
tests/test_handlers/: test_health.py
