[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raspberry-monitor"
version = "2.0.0"
description = "Lightweight real-time system monitor for Raspberry Pi/Linux"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "Raspberry Monitor Team" }
]
keywords = ["monitoring", "raspberry-pi", "system", "metrics", "dashboard", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
# Zero external dependencies - uses only Python standard library
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-cov >= 4.0",
    "ruff >= 0.1.0",
    "mypy >= 1.0",
]

[project.scripts]
raspberry-monitor = "monitor.server:main"

[project.urls]
Homepage = "https://github.com/raspberry-monitor/monitor"
Documentation = "https://github.com/raspberry-monitor/monitor#readme"
Repository = "https://github.com/raspberry-monitor/monitor"
Issues = "https://github.com/raspberry-monitor/monitor/issues"
Changelog = "https://github.com/raspberry-monitor/monitor/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
monitor = ["static/*.html", "static/*.css", "static/*.js"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
